syntax = "proto3";

package halfaas.proto.client;

service HalFaas {
  rpc RegisterWorkload(RegisterWorkloadRequest) returns (RegisterWorkloadResponse) {}
  rpc Invoke(InvokeRequest) returns (InvokeResponse) {}
}

message RegisterWorkloadRequest {
  string workloadName = 1;
  string acceleratorType = 2;
  int32 acceleratorAmount = 3;
}

message RegisterWorkloadResponse {

}

message InvokeRequest {
  string workloadName = 1;
  string params = 2;
}

message InvokeResponse {
  string result = 1;
}